[tool.poetry]
name = "flood-prediction-app"
version = "0.1.0"
description = ""
authors = ["JiongQ <kiewjy@gmail.com>"]
readme = "README.md"
packages = [{include = "flood_prediction_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
folium = "^0.14.0"
streamlit = "^1.22.0"
streamlit-folium = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
