[tool.poetry]
name = "flood-prediction-app"
version = "0.1.0"
description = ""
authors = ["JiongQ <kiewjy@gmail.com>"]
readme = "README.md"
packages = [{include = "flood_prediction_app"}]

[tool.poetry.dependencies]
#python = "^3.10"
python =">=3.10,<3.11"
pandas = "^2.0.1"
folium = "^0.14.0"
streamlit = "^1.22.0"
streamlit-folium = "^0.11.1"
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
